--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
                 Overview
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item bg-dark">
               <a class="nav-link" href="#">
                 Tickets
               </a>
